chages to legal db and util

--- a/backend/legal_db.ipynb
+++ b/backend/legal_db.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "dialogs = get_dialogs(case_id, meeting_timestamp)\n",
     "\n",
-    "dialog_db_1 = VectorDB(f\"Dialog:{case_id}_{meeting_timestamp}\", Dialog)\n",
+    "dialog_db_1 = VectorDB(f\"Dialog_{case_id}_{meeting_timestamp}\", Dialog)\n",
     "dialog_db_1.reset() # reset if exists\n",
     "dialog_db_1.add(dialogs)"
    ]
@@ -176,7 +176,7 @@
     "\n",
     "dialogs = get_dialogs(case_id, meeting_timestamp)\n",
     "\n",
-    "dialog_db_2 = VectorDB(f\"Dialog:{case_id}_{meeting_timestamp}\", Dialog)\n",
+    "dialog_db_2 = VectorDB(f\"Dialog_{case_id}_{meeting_timestamp}\", Dialog)\n",
     "dialog_db_2.reset() # reset if exists\n",
     "dialog_db_2.add(dialogs)"
    ]
