create mocked dialogs

--- a/backend/legal_db.ipynb
+++ b/backend/legal_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,50 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating collection Dialog_JUSTICIUS-MARCO_2023-11-13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "case_id = 'JUSTICIUS-MARCO'\n",
-    "meeting_timestamp = '2023-11-13'\n",
+    "meeting_timestamps = ['2023-11-13', '2023-11-27']\n",
     "\n",
-    "dialogs = get_dialogs(case_id, meeting_timestamp)\n",
-    "\n",
-    "dialog_db_1 = VectorDB(f\"Dialog_{case_id}_{meeting_timestamp}\", Dialog)\n",
-    "dialog_db_1.reset() # reset if exists\n",
-    "dialog_db_1.add(dialogs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating collection Dialog_JUSTICIUS-MARCO_2023-11-27\n"
-     ]
-    }
-   ],
-   "source": [
-    "case_id = 'JUSTICIUS-MARCO'\n",
-    "meeting_timestamp = '2023-11-27'\n",
-    "\n",
-    "dialogs = get_dialogs(case_id, meeting_timestamp)\n",
-    "\n",
-    "dialog_db_2 = VectorDB(f\"Dialog_{case_id}_{meeting_timestamp}\", Dialog)\n",
-    "dialog_db_2.reset() # reset if exists\n",
-    "dialog_db_2.add(dialogs)"
+    "for meeting_timestamp in meeting_timestamps:\n",
+    "    dialogs_db = VectorDB(f\"Dialog_{case_id}_{meeting_timestamp}\", Dialog)\n",
+    "    dialogs = get_dialogs(case_id, meeting_timestamp)\n",
+    "    dialogs_db.reset() \n",
+    "    dialogs_db.add(dialogs)"
    ]
   },
   {
@@ -584,6 +552,42 @@
     "    @function_tool\n",
     "    def get_relevant_meeting_snippets(self, meeting_id: str, query: str):\n",
     "        return self.meeting_dbs[meeting_id].search(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dialog generation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gpt_wrapper.assistants import ChatGPT\n",
+    "from gpt_wrapper.messages import SimpleHistory, msg\n",
+    "\n",
+    "# Step 1: Get the data\n",
+    "name, meeting_timestamp, case, lawyer = summary_submitted()\n",
+    "\n",
+    "# Step 2: Summarize\n",
+    "summarizer = ChatGPT(messages=SimpleHistory(), model=\"gpt-4-1106-preview\")\n",
+    "\n",
+    "dialog = await summarizer(f\"\"\"\n",
+    "Generate a dialog (around 20 conversations) with the ID of {meeting_timestamp} between the {lawyer} and the {name} based on the information from {case}. \n",
+    "It should be the first interaction of the lawyer and client. Usually, talk about general things about the case, the lawyer's strategy, and the fee. \n",
+    "The conversation always starts with the lawyer speaking first.\n",
+    "\"\"\")\n",
+    "\n",
+    "# Step 3: Generate an object for the database\n",
+    "case_id = f\"{lawyer}-{name}\" \n",
+    "meeting_timestamp = meeting_timestamp\n",
+    "dialogs_db.reset()\n",
+    "dialogs_db.add(dialog)  \n",
+    "\n"
    ]
   }
  ],
