--- a/backend/create_mocked_case.ipynb
+++ b/backend/create_mocked_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "load_dotenv()\n",
     "\n",
     "from backend.database import Case, cases_db, Meeting, meetings_db, Dialog, dialogs_db\n",
-    "from backend.database.generate import generate_mocked_dialog, generate_meeting_title_summary"
+    "from backend.database.generate import generate_mocked_dialog, generate_meeting_title_summary\n",
+    "from backend.database.utils import to_timestamp"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating collection Meetings_JUSTICIUS-MARCO\n"
+     ]
+    }
+   ],
    "source": [
     "marco_meeting1 = Meeting(\n",
-    "    timestamp=meeting1_timestamp,\n",
+    "    timestamp=to_timestamp(meeting1_timestamp),\n",
     "    title=title,\n",
     "    summary=summary,\n",
     ")\n",
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
