add the mocked dialog2 for marco

--- a/backend/create_mocked_case.ipynb
+++ b/backend/create_mocked_case.ipynb
@@ -168,7 +168,7 @@
     "marco_meeting1 = Meeting(\n",
     "    timestamp=to_timestamp(meeting1_timestamp),\n",
     "    title=title,\n",
-    "    summary=summary,\n",
+    "    summary=summary\n",
     ")\n",
     "\n",
     "meetings_db(case.case_id).add([marco_meeting1])"
@@ -178,7 +178,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meeting 2"
+    "### Meeting 2 Dialog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "meeting2_timestamp = '2023-11-27'\n",
+    "dialogs2 = [\n",
+    "Dialog(speaker=\"Justicius\", content=\"Good day, Marco! I trust everything has been going smoothly since our last discussion.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"Hello, Justicius! Yes, everything's been fine. I've had some time to review the documents we discussed, and I'm ready for our next steps.\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"Excellent. I'm glad to hear that. Let's delve into the details. I've thoroughly reviewed the documents you provided, including your marriage certificate and financial statements. It's essential to have a comprehensive understanding of your situation.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"I appreciate your thoroughness, Justicius. Is there anything specific you need from me at this point?\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"Not at the moment. You've done a great job compiling the necessary information. In our current discussion, let's focus on the key elements of our divorce strategy. One significant aspect is addressing potential challenges that may arise, such as disagreements on asset division, spousal support, or child custody. By anticipating these challenges now, we can formulate proactive solutions.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"That sounds important, Justicius. What strategies do you propose for handling potential disagreements on asset division?\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"For asset division, it's crucial to establish a clear inventory of shared assets and debts. During our strategy discussions, we'll delve into detailed negotiation approaches, considering your priorities and what's fair and equitable. If needed, we can explore mediation or alternative dispute resolution methods to find common ground.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"I see. And what about potential challenges regarding spousal support?\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"Spousal support considerations vary widely. We'll examine your financial situation and your spouse's to determine a fair arrangement. This involves calculating factors like income, earning capacity, and the duration of the marriage. By addressing these details upfront, we aim to minimize disputes and streamline the process.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"That makes sense. Child custody is also a concern. How can we approach that?\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"Child custody matters are sensitive. Our strategy involves crafting a parenting plan that prioritizes the child's best interests. We'll discuss factors like the child's relationship with each parent, living arrangements, and visitation schedules. By being proactive and considering the child's well-being, we aim to create a plan that both parties find acceptable.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"I appreciate the detailed insight, Justicius. It's reassuring to know we're being proactive about potential challenges.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"Also, I've found ChatJustus to be quite helpful. It's available 24/7 for quick updates or questions, providing additional convenience.\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"I'm glad to hear that, Marco. ChatJustus is indeed a valuable resource. Strategy is key in navigating a divorce, and having ChatJustus at your disposal ensures continuous support. Our goal is to approach each aspect thoughtfully, addressing potential issues before they become major obstacles. If you have any specific concerns or preferences in these areas, feel free to share them, and we'll incorporate them into our strategy.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"Thank you, Justicius. I feel more informed and confident about the road ahead. Let's continue developing our strategy.\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"Certainly, Marco. Your input is valuable as we tailor our approach to your unique situation. Remember, open communication is crucial throughout this process. If you have any questions or thoughts between our scheduled meetings, don't hesitate to reach out via ChatJustus or directly. We're here to support you.\"),\n",
+    "    Dialog(speaker=\"Marco\", content=\"I appreciate that, Justicius. Looking forward to crafting a solid strategy together. Have a great day!\"),\n",
+    "    Dialog(speaker=\"Justicius\", content=\"You too, Marco. We'll be in touch soon.\")\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dialog2_db = dialogs_db(case.case_id, meeting2_timestamp)\n",
+    "dialog2_db.add(dialogs2, list(range(len(dialogs2))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Meeting 2 Summary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title=\"Divorce Strategy and Support Tools Meeting\"\n",
+    "summary= \"In your last meeting with your lawyer Justicius, the following key points were discussed: 1. Proactive Strategy for Potential Challenges**: Justicius emphasized the importance of being proactive in addressing potential challenges in your divorce, such as asset division, spousal support, and child custody. He plans to anticipate these issues and formulate solutions in advance. 2. Detailed Negotiation and Parenting Plans**: A clear inventory of shared assets and debts will be established for asset division, and detailed negotiation approaches will be considered. For child custody, a parenting plan that prioritizes your child's best interests will be crafted, taking into account various factors to ensure a fair and acceptable arrangement. 3. Use of ChatJustus for Support**: You've found the ChatJustus tool helpful, and Justicius encourages its continued use. It provides 24/7 support for updates and questions, ensuring continuous assistance throughout your divorce proceedings. Do you have any questions or concerns about the points covered in the meeting?\""
    ]
   },
   {
@@ -187,7 +244,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "macro_meeting2 = Meeting(\n",
+    "    timestamp=to_timestamp(meeting2_timestamp),\n",
+    "    title=title,\n",
+    "    summary=summary\n",
+    ")\n",
+    "\n",
+    "meetings_db(case.case_id).add([macro_meeting2])"
    ]
   }
  ],
