follow up fixed?

--- a/backend/create_mocked_case.ipynb
+++ b/backend/create_mocked_case.ipynb
@@ -137,8 +137,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title=\"Divorce Case Strategy and Fee Discussion with Justicius\"\n",
-    "summary= \"In your last meeting with Justicius, the following key points were covered: Fee Structure : 1. Justicius provided information on his hourly rate and the possibility of a flat fee arrangement to give you more predictability in legal costs. 2. Divorce Strategy : A strategy will be developed to ensure a fair division of assets and a smooth resolution, with Justicius keeping you informed at every step of the process. 3. Documentation and Next Steps**: You'll need to provide relevant documents such as your marriage certificate and financial statements, and a check-in meeting is suggested in two weeks to discuss updates.Do you have any questions about these points or anything else from the meeting?\"\n",
+    "title = \"Divorce Case Strategy and Fee Discussion with Justicius\"\n",
+    "summary= \"\"\"\n",
+    "In your last meeting with Justicius, the following key points were covered:\n",
+    "Fee Structure:\n",
+    "1. Justicius provided information on his hourly rate and the possibility of a flat fee arrangement to give you more predictability in legal costs.\n",
+    "2. Divorce Strategy: A strategy will be developed to ensure a fair division of assets and a smooth resolution, with Justicius keeping you informed at every step of the process.\n",
+    "3. Documentation and Next Steps**: You'll need to provide relevant documents such as your marriage certificate and financial statements, and a check-in meeting is suggested in two weeks to discuss updates.\n",
+    "\n",
+    "Do you have any questions about these points or anything else from the meeting?\n",
+    "\"\"\".strip()\n",
     "\n",
     "# Alternatively, use GPT to generate a meeting title and summary\n",
     "# title, summary = await generate_meeting_title_summary(case, dialogs1)"
