fixed summary format

--- a/backend/create_mocked_case.ipynb
+++ b/backend/create_mocked_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dialog1_db = dialogs_db(case.case_id, meeting1_timestamp)\n",
+    "dialog1_db.reset()\n",
     "dialog1_db.add(dialogs1, list(range(len(dialogs1))))"
    ]
   },
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +142,9 @@
     "summary= \"\"\"\n",
     "In your last meeting with Justicius, the following key points were covered:\n",
     "Fee Structure:\n",
-    "1. Justicius provided information on his hourly rate and the possibility of a flat fee arrangement to give you more predictability in legal costs.\n",
-    "2. Divorce Strategy: A strategy will be developed to ensure a fair division of assets and a smooth resolution, with Justicius keeping you informed at every step of the process.\n",
-    "3. Documentation and Next Steps**: You'll need to provide relevant documents such as your marriage certificate and financial statements, and a check-in meeting is suggested in two weeks to discuss updates.\n",
+    "1. **Justicius** provided information on his hourly rate and the possibility of a flat fee arrangement to give you more predictability in legal costs.\n",
+    "2. **Divorce Strategy**: A strategy will be developed to ensure a fair division of assets and a smooth resolution, with Justicius keeping you informed at every step of the process.\n",
+    "3. **Documentation and Next Steps**: You'll need to provide relevant documents such as your marriage certificate and financial statements, and a check-in meeting is suggested in two weeks to discuss updates.\n",
     "\n",
     "Do you have any questions about these points or anything else from the meeting?\n",
     "\"\"\".strip()\n",
@@ -161,17 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating collection Meetings_JUSTICIUS-MARCO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "marco_meeting1 = Meeting(\n",
     "    timestamp=to_timestamp(meeting1_timestamp),\n",
@@ -191,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating collection Dialogs_JUSTICIUS-MARCO_2023-11-27\n"
+     ]
+    }
+   ],
    "source": [
     "dialog2_db = dialogs_db(case.case_id, meeting2_timestamp)\n",
+    "dialog2_db.reset()\n",
     "dialog2_db.add(dialogs2, list(range(len(dialogs2))))"
    ]
   },
@@ -238,17 +240,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "title=\"Divorce Strategy and Support Tools Meeting\"\n",
-    "summary= \"In your last meeting with your lawyer Justicius, the following key points were discussed: 1. Proactive Strategy for Potential Challenges**: Justicius emphasized the importance of being proactive in addressing potential challenges in your divorce, such as asset division, spousal support, and child custody. He plans to anticipate these issues and formulate solutions in advance. 2. Detailed Negotiation and Parenting Plans**: A clear inventory of shared assets and debts will be established for asset division, and detailed negotiation approaches will be considered. For child custody, a parenting plan that prioritizes your child's best interests will be crafted, taking into account various factors to ensure a fair and acceptable arrangement. 3. Use of ChatJustus for Support**: You've found the ChatJustus tool helpful, and Justicius encourages its continued use. It provides 24/7 support for updates and questions, ensuring continuous assistance throughout your divorce proceedings. Do you have any questions or concerns about the points covered in the meeting?\""
+    "summary= \"\"\"\n",
+    "In your last meeting with your lawyer Justicius, the following key points were discussed:\n",
+    "1. **Proactive Strategy for Potential Challenges**: Justicius emphasized the importance of being proactive in addressing potential challenges in your divorce, such as asset division, spousal support, and child custody. He plans to anticipate these issues and formulate solutions in advance.\n",
+    "2. **Detailed Negotiation and Parenting Plans**: A clear inventory of shared assets and debts will be established for asset division, and detailed negotiation approaches will be considered. For child custody, a parenting plan that prioritizes your child's best interests will be crafted, taking into account various factors to ensure a fair and acceptable arrangement.\n",
+    "3. **Use of ChatJustus for Support**: You've found the ChatJustus tool helpful, and Justicius encourages its continued use. It provides 24/7 support for updates and questions, ensuring continuous assistance throughout your divorce proceedings.\n",
+    "\n",
+    "Do you have any questions or concerns about the points covered in the meeting?\n",
+    "\"\"\".strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
