working follow up

--- a/backend/create_mocked_case.ipynb
+++ b/backend/create_mocked_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating collection Cases\n"
+     ]
+    }
+   ],
    "source": [
     "cases_db().add([case])"
    ]
@@ -72,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meeting1_timestamp = '2023-11-13'\n",
+    "meeting1_timestamp = to_timestamp('2023-11-13')\n",
     "dialogs1 = [\n",
     "    Dialog(speaker=\"Justicius\", content=\"Hello, I'm Justicius, your divorce attorney. Nice to meet you, Marco!\"),\n",
     "    Dialog(speaker=\"Marco\", content=\"Hey, Justicius. Pleasure to meet you too.\"),\n",
@@ -116,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating collection Dialogs_JUSTICIUS-MARCO_1699830000\n"
+     ]
+    }
+   ],
    "source": [
     "dialog1_db = dialogs_db(case.case_id, meeting1_timestamp)\n",
     "dialog1_db.reset()\n",
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,17 +178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating collection Meetings_JUSTICIUS-MARCO\n"
+     ]
+    }
+   ],
    "source": [
     "marco_meeting1 = Meeting(\n",
-    "    timestamp=to_timestamp(meeting1_timestamp),\n",
+    "    timestamp=meeting1_timestamp,\n",
     "    title=title,\n",
     "    summary=summary\n",
     ")\n",
     "\n",
-    "meetings_db(case.case_id).add([marco_meeting1])"
+    "meetings_db(case.case_id).add([marco_meeting1], [meeting1_timestamp])"
    ]
   },
   {
@@ -184,12 +208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "meeting2_timestamp = '2023-11-27'\n",
+    "meeting2_timestamp = to_timestamp('2023-11-27')\n",
     "dialogs2 = [\n",
     "Dialog(speaker=\"Justicius\", content=\"Good day, Marco! I trust everything has been going smoothly since our last discussion.\"),\n",
     "    Dialog(speaker=\"Marco\", content=\"Hello, Justicius! Yes, everything's been fine. I've had some time to review the documents we discussed, and I'm ready for our next steps.\"),\n",
@@ -214,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating collection Dialogs_JUSTICIUS-MARCO_2023-11-27\n"
+      "Creating collection Dialogs_JUSTICIUS-MARCO_1701039600\n"
      ]
     }
    ],
@@ -240,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,17 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "macro_meeting2 = Meeting(\n",
-    "    timestamp=to_timestamp(meeting2_timestamp),\n",
+    "marco_meeting2 = Meeting(\n",
+    "    timestamp=meeting2_timestamp,\n",
     "    title=title,\n",
     "    summary=summary\n",
     ")\n",
     "\n",
-    "meetings_db(case.case_id).add([macro_meeting2])"
+    "meetings_db(case.case_id).add([marco_meeting2], [meeting2_timestamp])"
    ]
   }
  ],
