change justicius gender

--- a/backend/create_lawyer_db.ipynb
+++ b/backend/create_lawyer_db.ipynb
@@ -62,7 +62,7 @@
     "justicius = Lawyer(\n",
     "    name=\"Justicius\",\n",
     "    specialization=\"Divorce Law\",\n",
-    "    introduction=\"A compassionate and skilled family law attorney, Justicius leads the divorce practice at Sterling Legal Associates. With a focus on ensuring the best interests of her clients, Justicius has guided numerous individuals through the complexities of divorce, custody, and spousal support cases.\",\n",
+    "    introduction=\"A compassionate and skilled family law attorney, Justicius leads the divorce practice at Sterling Legal Associates. With a focus on ensuring the best interests of his clients, Justicius has guided numerous individuals through the complexities of divorce, custody, and spousal support cases.\",\n",
     "    practice_areas=[\n",
     "        \"Divorce and legal separation\",\n",
     "        \"Child custody and support\",\n",
