--- a/backend/create_lawyer_db.ipynb
+++ b/backend/create_lawyer_db.ipynb
@@ -36,7 +36,7 @@
       "\n",
       "2. Justicius\n",
       "- Specialization: Divorce Law\n",
-      "- Introduction: A compassionate and skilled family law attorney, Justicius leads the divorce practice at Sterling Legal Associates. With a focus on ensuring the best interests of her clients, Justicius has guided numerous individuals through the complexities of divorce, custody, and spousal support cases.\n",
+      "- Introduction: A compassionate and skilled family law attorney, Justicius leads the divorce practice at Sterling Legal Associates. With a focus on ensuring the best interests of his clients, Justicius has guided numerous individuals through the complexities of divorce, custody, and spousal support cases.\n",
       "- Practice Areas: Divorce and legal separation, Child custody and support, Spousal support (alimony), Property division\n",
       "\n",
       "3. David Chambers\n",
@@ -90,15 +90,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating collection Lawyers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db = lawyers_db()\n",
     "db.reset()\n",
@@ -122,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
